--- a/PROC_MAPA/.cproject
+++ b/PROC_MAPA/.cproject
@@ -32,6 +32,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libTeamRocket}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/utnso/so-nivel-gui-library/nivel-gui"/>
 								</option>
+								<option id="gnu.c.compiler.option.debugging.other.457643654" name="Other debugging flags" superClass="gnu.c.compiler.option.debugging.other" value="" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1821842705" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1906076415" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug">
