--- a/PROC_ENTRENADOR/.cproject
+++ b/PROC_ENTRENADOR/.cproject
@@ -36,6 +36,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1790949608" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug">
 								<option id="gnu.c.link.option.libs.1443857527" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="libTeamRocket"/>
+									<listOptionValue builtIn="false" value="pkmn-battle"/>
 									<listOptionValue builtIn="false" value="commons"/>
 								</option>
 								<option id="gnu.c.link.option.paths.2134411976" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths">
